objects/zqu__ZUnitOfMeasure__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates UOM is active</description>
        <inlineHelpText>Indicates UOM is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__BillingEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Entity</label>
        <referenceTo>zqu__BillingEntity__c</referenceTo>
        <relationshipLabel>Units of Measure</relationshipLabel>
        <relationshipName>UnitsOfMeasure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <formula>zqu__BillingEntity__r.zqu__EntityID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__UOMFullName__c</fullName>
        <description>full of uom&apos; s name.</description>
        <label>UOM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Uom_precision__c</fullName>
        <description>Decimal Places</description>
        <label>Decimal Places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Uom_rounding_mode__c</fullName>
        <label>Rounding Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                    <default>true</default>
                    <label>Up</label>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Zuora Id (external primary key) of this Unit of Measure.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Zuora Id (external primary key) of this Unit of Measure.</inlineHelpText>
        <label>Zuora Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Unit Of Measure</label>
    <nameField>
        <label>Unit of Measure</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Of Measure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>